# MuMain

./: BUILD.md  CHANGES.md  CMakeLists.txt  CROSSPLATFORM.md  GLFW_IMPLEMENTATION.md  INTEGRATION_PROGRESS.md  INTEGRATION_SUCCESS.md  MIGRATION.md  MUMAN_BUILD_ISSUES.md  QUICKSTART.md  QUICK_START_NEXT_STEPS.md  README.md  SESSION_SUMMARY.md  build-unix.sh  build-windows.bat  build-windows.ps1  build_main_simple.sh  build_test.sh  main_crossplatform  run_test_brief.sh  test_integration.sh  test_main_simple  test_main_simple.cpp  test_platform  test_platform.cpp
ClientLibrary/: MUnique.Client.Library.csproj
Source Main 5.2/dependencies/include/: span.hpp
Source Main 5.2/source/: BaseCls.h  CBTMessageBox.cpp  CBTMessageBox.h  CSEventMatch.cpp  CSQuest.cpp  CSWaterTerrain.cpp  CameraMove.cpp  DSPlaySound.h  Defined_Global.h  GMCryingWolf2nd.cpp  GMDoppelGanger3.cpp  GM_Kanturu_3rd.cpp  GM_PK_Field.cpp  GameCore.cpp  GameCore.h  GameGlobals.cpp  GameTypes.h  GlobalBitmap.cpp  LoadData.cpp  LoginWin.cpp  MixMgr.h  MsgWin.cpp  NewUIButton.cpp  NewUICommon.cpp  NewUILuckyItemWnd.h  NewUIMessageBox.h  NewUIMuHelper.h  NewUIStorageInventory.cpp  Singleton.h  UIControls.h  WSclient.cpp  Winmain.cpp  main_crossplatform.cpp  stdafx.h  w_WindowMessageHandler.h
Source Main 5.2/source/Dotnet/: Connection.h
Source Main 5.2/source/GameShop/FileDownloader/: FTPConnecter.cpp  FileDownloader.cpp  HTTPConnecter.cpp  HTTPConnecter.h  Include.h
Source Main 5.2/source/GameShop/ShopListManager/: Include.h
Source Main 5.2/source/GameShop/ShopListManager/interface/: FTPConnecter.h  FileDownloader.h  IConnecter.h  Include.h
Source Main 5.2/source/GameShop/ShopListManager/interface/WZResult/: WZResult.h
Source Main 5.2/source/MUHelper/: MuHelper.cpp
Source Main 5.2/source/Platform/: Platform.cpp  Platform.h  PlatformAudio.h  PlatformFile.h  PlatformInput.cpp  PlatformInput.h  PlatformInput_GLFW.cpp  PlatformTime.h  PlatformWindow.h  PlatformWindow_GLFW.cpp  WindowsTypes.h
Source Main 5.2/source/Utilities/Log/: ErrorReport.h  WindowsConsole.h  muConsoleDebug.h
